# LotteryPython

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  big_sequence.csv  big_sorted.csv  credentials.json  docker-compose.yml  example.xml  lottery_data.py  main.py  nginx.conf  parse.py  power_lottery.csv  pyproject.toml  radom.py  requirements.txt  spec.md  taiwan_lottery.py  update_data.py
_bmad-output/implementation-artifacts/: story-07-algorithm-smoke-tests.md  story-08-predictor-base.md  (+8 more)
docs/: api-reference.md  architecture.md  cli-reference.md  daily-automation.md  data-flow.md  data-models.md  deployment.md  prediction-algorithms.md
lotterypython/: analysis_sheet.py  big_sequence.csv  big_sorted.csv  logic.py  super_sequence.csv  super_sorted.csv  taiwan_lottery.py  update_data.py  utils.py
notify/: line_notifier.py
predict/: algorithm_config.json  backtest.py  config.py  lotto_predict_LSTMRF.py  lotto_predict_astrology.py  lotto_predict_cold_50.py  lotto_predict_ensemble.py  lotto_predict_hot_50.py  lotto_predict_lstm.py  lotto_predict_markov.py  lotto_predict_pattern.py  lotto_predict_rf_gb_knn.py  lotto_predict_xgboost.py  lottto_predict.py  optimizer.py
scripts/: com.lotterypython.daily.plist  crontab.example  daily_automation.py  daily_automation.sh  run_lottery_schedule.sh
templates/: index.html  login.html  profiles.html  settings.html
tests/: test_analysis_sheet.py  test_autotune.py  test_backtest_regression.py  test_bayesian_optimizer.py  test_ensemble.py  test_predict.py  test_taiwan_lottery.py  test_time_decay.py  test_walk_forward.py
(+5 files in other folders)
