[tool.poetry]
name = "lotterypython"
version = "0.1.0"
description = ""
authors = ["Bruce Lee <bruce.lee1@dell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
test-package = { path = "test-package" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
