[tool.poetry]
name = "lotterypython"
version = "0.1.0"
description = ""
authors = ["Bruce Lee <bruce.lee1@dell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
test-package = { path = "test-package" }
numpy = "^1.24"
pandas = "^1.5"
matplotlib = "^3.7"
gspread = "^5.7"
oauth2client = "^4.1"
beautifulsoup4 = "^4.12"
requests = "^2.31"
cloudscraper = "^1.2"
scikit-learn = "^1.3"
tensorflow = "^2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"