[tool.poetry]
name = "lotterypython"
version = "0.1.0"
description = ""
authors = ["Bruce Lee <bruce.lee1@dell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gspread = "*"
oauth2client = "*"
cloudscraper = "*"
beautifulsoup4 = "*"
requests = "*"

[tool.poetry.extras]
optimize = ["optuna"]

[tool.poetry.dependencies.optuna]
version = ">=3.0.0"
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (neural network training, full backtest) — deselect with -m 'not slow'",
]
